# creative_cultural_ecosystem

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml
scripts/: quantize_model.py  stable_audio_direct.py  stable_audio_generate.py  stable_audio_optimized.py  stable_audio_simple_final.py  stable_audio_simple_final.spec  stable_audio_transformers.py
src/: App.vue  env.d.ts  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/clients/: minimax.rs
src-tauri/src/commands/: ai.rs  ambient.rs  audio.rs  chapter.rs  character.rs  logger.rs  mcp.rs  mixer.rs  mod.rs  novel.rs  system.rs  video.rs
src-tauri/src/db/: migrations.rs  mod.rs  models.rs
src-tauri/src/mcp/: discovery.rs  error.rs  mod.rs  protocol.rs  server.rs
src-tauri/src/mcp/tools/: ai.rs  ambient.rs  audio.rs  chapter.rs  chapter_audio.rs  character.rs  mod.rs  novel.rs
src/components/common/: PageContainer.vue  StatCard.vue  StatusTag.vue  index.ts
src/router/: index.ts
src/stores/: novel.ts
src/styles/: global.css  variables.css
src/views/ambient/: index.vue
src/views/audio/: index.vue
src/views/characters/: index.vue
src/views/dashboard/: index.vue
src/views/mixer/: AudioMixer.ts  index.vue  mixer.css  types.ts
src/views/mixer/components/: AmbientLibrary.vue  AudioClip.vue  AudioTrack.vue  ClipPropertyPanel.vue  (+7 more)
src/views/novels/: chapter-create.vue  chapter-edit.vue  chapters.vue  create.vue  detail.vue  index.vue
src/views/settings/: index.vue
src/views/video/: index.vue
(+1 files in other folders)
